# aiopixiv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
aiopixiv/: __init__.py  __main__.py  _api.py  _defaults.py  _pixivobject.py  error.py
aiopixiv/_cli/: __init__.py  _auth.py  _download.py  _entry.py
aiopixiv/_utils/: datetime.py  files.py  logging.py  types.py
aiopixiv/models/: authentication.py  bookmark.py  comment.py  illust.py  manga.py  novel.py  page.py  privacy.py  search.py  tag.py  ugoira.py  urls.py  user.py
aiopixiv/request/: __init__.py  _baserequst.py  _httpxrequest.py  _inputfile.py  _requestdata.py  _requestparameters.py
tests/: conftest.py  test_api.py
tests/auxil/: file.py  slots.py
tests/data/: assets.py  urls.py
