[tool.poetry]
name = "aiopixiv"
version = "0.1.0"
description = "Asynchronous Pixiv API for Python (with 6.x AppAPI supported)"
authors = ["Nachtalb <na@nachtalb.io>"]
license = "LGPL-3.0"
readme = "README.md"
keywords = ["pixiv", "api", "pixivapi", "async"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Typing :: Typed",
]
homepage = "https://github.com/Nachtalb/aiopixiv"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
aiopath = "^0.6.11"
yarl = "^1.9.2"

[tool.poetry.group.dev.dependencies]
black = { version = ">=23.0" }
ruff = ">=0.0.263"
isort = ">=5.11.5"
mypy = ">=1.0"
pre-commit = "^3.0"
pytest = ">=7.3"
ipdb = ">=0.13.13"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "test"
addopts = "-rsxX"
filterwarnings = """
error
ignore::DeprecationWarning
ignore:Tasks created via `Application.create_task` while the application is not running
ignore::ResourceWarning
"""
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
show_error_codes = true
pretty = true
strict = true

[[tool.mypy.overrides]]
module = "aiopath.*"
ignore_missing_imports = "True"
